core/static/css/v2/pages/home/home-page.less
@import "../../colors/colors";
@import "../../layout/mixins";
@import "../../layout/responsive";

#main_content {
  margin-top: 0;
  min-height: 0;
}

#mainnav {
  margin: 0;
}
#mainnav .navbar-header{
  .header-title-wrapper {
    display: inline-block;
}
}

#myCarousel-1 {
  margin-bottom: 60px;
  .item {
    max-height: 930px;
    img {
      width: 100%;
    }
    .item-container {
      position: absolute;
      z-index: 9999999999;
      top: 25%;
      .margin-left {
        margin-left: 10px;
      }
      div:first-child {
        margin: 0px auto;
        text-align: center;
        span {
          background: @bg-light;
          padding: 2px 10px;
          letter-spacing: 2px;
        }
        + h1 {
          .font-size(50);
          color: @text-light;
          padding: 40px 0;
          max-width: 320px;
          margin: 0;

          + div {
            text-align: center;
            a {
              padding: 15px 20px;
              .font-size(16);
              color: @text-light;
              border-top: 1px solid @border-light;
              border-bottom: 1px solid @border-light;
              &:hover {
                color: @primary-color;
              }
            }
          }
        }
      }
    }
  }
  .carousel-control-container {
    border: 1px solid @lighter-grey;
    height: 40px;
    width: 90px;
    position: absolute;
    top: 80%;
    margin-left: 100px;
  }
  .carousel-control {
    &.left, &.right {
      background: none;
      width: 44px;
      color: @lighter-grey;
      opacity: 1;
      background: @bg-lighter-transparent;
      &:hover {
        opacity: 0.6;
      }
      i {
        .font-size(34);
      }
    }
    &.right {
      border-left: 1px solid @bg-light;
    }
  }
}

#myCarousel-2 {
  margin-bottom: 60px;
  .carousel-title {
    h4 {
      color: @primary-color;
      margin-bottom: 20px;
    }
  }
  .carousel-control-container {
    border: 1px solid @light-grey;
    height: 40px;
    width: 90px;
    position: absolute;
    bottom: 0;
    margin-left: 100px;
    left: 0;
  }
  .carousel-control {
    &.left, &.right {
      background: none;
      width: 44px;
      color: @light-grey;
      opacity: 1;
      background: @bg-lighter-transparent;
      text-shadow: none;
      &:hover {
        opacity: 0.6;
      }
      i {
        .font-size(34);
      }
    }
    &.right {
      border-left: 1px solid @light-grey;
    }
  }
  .gallery-tile {
    margin-bottom: 0;
    img {
      max-height: 80%;
      max-width: 100%;
    }
    .gallery-tile-info {
      .date {
        .dot-seperator {
          padding: 0px 5px 2px 5px;
          font-weight: 800;
          color: @text-title-light;
        }
        a {
          &:hover {
            color: @primary-color;
          }
          color: @text-title-light;
          font-weight: 300;
          font-size: 1em;
          letter-spacing: 1px;
        }

      }
      min-height: auto;
      h2 {
        margin-top: 0;
        .font-size(36);
      }
      p {
        .font-size(16);
        margin-bottom: 20px;
      }
      .name-primary {
        .font-size(16);
        margin-bottom: 20px;
        + a {
          .font-size(16);
          color: @grey;
          padding-bottom: 40px;
        }
      }
    }
  }
  .carousel-inner {
    .view-all {
      margin-top: 30px;
      text-align: left;
      a {
        span {
          margin: 0;
          padding: 0;
        }
      }
    }
  }
  .carousel-control-container {
    margin-left: 0;
  }
}

.home-article-grid-1 {
  background: @lighter-grey;
  padding: 40px 0 20px 0;
  margin-bottom: 60px;
  .dropdown {
    button {
      border-radius: 0;
      border-style: solid;
      background-color: @lighter-grey;
      border-width: 1px;
      border-color: lightgrey;
      color: @grey;
    }
  }
  .open > .dropdown-menu {
    display: block;
    min-width: 89px;
    text-align: center;
    border-radius: 0;
    color: @grey;
  }
  .tags-label {
    background: white;
  }
  .grid {
    margin-bottom: 0;
    img {
    }
  }
  .link-dark {
    color: @darker-grey;
    .font-size(14);
  }
}

.home-article-grid-2 {
  .view-article {
    border-top: 1px solid @light-grey;
    margin-top: 20px;
    padding-top: 20px;
    a {
      .font-size(16);
      color: @dark-grey;
      i {
        color: @grey;
      }
      &:hover {
        i {
          text-decoration: none;
        }
      }
      span {
        padding: 0 10px;
      }
    }
  }
  .article-image-icon {
    position: relative;
    div {
      position: absolute;
      background: @bg-dark-transparent;
      padding: 5px 10px;
      color: @light-grey;
      .font-size(16);
    }
    img {
      + div {
        top: 0;
        left: 15px;
        border-radius: 0 0 5px 0;
        + div {
          bottom: 23px;
          left: 18px;
          border-radius: 0 5px 0 0;
        }
      }
    }
  }
}

.home-article-grid-3 {
  margin-bottom: 60px;
  .large {
    a {
      img {
        width: 100% !important;
        margin: 0 auto;
      }
    }
  }
  .grid {
    padding: 10px;
    &.share {
      h1 {
        min-height: 265px;
      }
    }
    .desc-para {
      line-height: 15px;
      margin-top: 0px;
    }
    .fa {
      padding-top: 8px;
    }
    .all-categ-head {
      padding-bottom: 50px;
      margin-top: 0px;
    }
    h4 {
      .font-size(30);
      color: @text-title-light;
      font-weight: 300;
    }
    h1.subtitle {
      font-weight: 300;
    }
    .subtitle {
      .font-size(58);
      margin: 0;
      color: @text-title-light;
    }
    .mid-below-link {
      padding: 15px 0;

      a {
        color: @darker-grey;
      }
    }
    .mid-link {
      border-top: 1px solid @grey;
      border-bottom: 1px solid @grey;
      padding: 15px 0;
      a {
        color: @darker-grey;
      }
    }
    h6 {
      color: @grey;
    }
    p {
      color: @text-title-light;
    }
    a {
      color: @grey;
      &:hover {
        color: @link-primary;
      }
    }
  }
}

.faces-tile-1 {
  img {
    width: 100%
  }
  margin-bottom: 30px;
  position: relative;
  .faces-container {
    position: absolute;
    top: 0;
    width: 88%;
    right: 0;
    left: 0;
    margin: auto;
    bottom: 0;
    padding: 40px;
    .row {
      margin-bottom: 80px;
    }
    h2 {
      color: @text-light;
      border-right: 1px solid @border-light;
      padding: 20px 0px;
    }
    button {
      color: @text-light;
      background: @bg-lighter-transparent;
      border: 1px solid @border-light;
      margin: 40px 0px 0px;
    }
    p {
      color: @grey;
      margin: 7px 0;
      a {
        color: @grey;
        &:hover {
          color: @primary-color;
        }
      }
    }
  }
}

@media (max-width: @screen-xs-max) {
  .navbar-header {
    position: relative;
    .header-title-wrapper {
      display: inline-block;
      position: absolute;
      left: 0;
      right: 0;
      top: 0;
      bottom: 0;
      margin: auto;
      height: 32px;
      text-align: center;
    }
  }

  #myCarousel-1 .carousel-control-container {
    top: 37%;
    margin: 0;
    left: 0;
    .left, .right {

    }
  }

  .home-article-grid-3 .grid.share h1 {
    min-height: auto;
  }

  .home-article-grid-1 {
    margin-bottom: 20px;
  }

  #myCarousel-2 {
    margin-bottom: 20px;
  }

  #myCarousel-1 {
    margin-bottom: 20px;
    .item .item-container {
      padding-bottom: 20px;
      border-bottom: 1px solid @grey;
      position: static;
      div:first-child {
        margin-top: 20px;
        span {
          background: @bg-light;
          padding: 2px 10px;
          letter-spacing: 2px;
        }
        + h1 {
          .font-size(50);
          color: @text-dark;
          padding: 10px 0;
          max-width: 320px;
          margin: 0;

          + div {
            text-align: center;
            a {
              padding: 15px 20px;
              .font-size(16);
              color: @text-dark;
              border-top: 1px solid @border-light;
              border-bottom: 1px solid @border-light;
              &:hover {
                color: @primary-color;
              }
            }
          }
        }
      }
    }
  }

  .faces-tile-1 {
    margin-bottom: 0px;
    .faces-container {
      position: static;
      width: 100%;
      padding: 10px;
      .row {
        margin-bottom: 0px;
      }
      h2 {
        color: @text-dark;
        border-right: none;
        padding: 0;
        margin: 0;
      }
      button {
        color: @text-dark;
        background: @bg-lighter-transparent;
        border: 1px solid @border-dark;
        margin: 20px 0;
      }
      p {
        color: @grey;
        a {
          color: @grey;
          &:hover {
            color: @primary-color;
          }
        }
      }
    }
  }

  #mainnav .navbar-header .navbar-brand-title {
    display: block;
    margin: 5px 0px 5px 22px;
    color: black;
    font-size: 3.7vw;
    line-height: 2.4vw;
  }

   .home-page #mainnav .navbar-header .navbar-brand-sub-title {
    display: block !important;
    font-size: 1.4vw;
  }

   .home-page #mainnav .navbar-header .navbar-brand{
     position: relative;
     float: left;
   }
  #mainnav .navbar-header .navbar-brand img {
    width: 57px;
    left: 0px;
    position: absolute;
    margin-left: 13px;
  }

}


.red-angle-right {
  color: @primary-color;
  padding-left: 5px;
  font-weight: 700;
}

.pari-doing-block {
  border-top: 1px solid @border-dark;
  margin-top: 30px;
  padding-top: 40px;
  .pari-do-link {
    padding-bottom: 10px;
  }
  a {
    text-decoration: none;
    color: @dark-grey;
    letter-spacing: 1px;
    font-size: 1.5em;
    &:hover {
      cursor: pointer;
      color: @primary-color;
    }
  }
  h1 {
    color: @primary-color;
    padding-bottom: 20px;
  }
}

@media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {

  .faces-tile-1 {
    margin-bottom: 0px;
    .faces-container {
      position: static;
      width: 91%;
      padding: 0;
      .row {
        margin-bottom: 0px;
      }
      h2 {
        color: @text-dark;
        border-right: none;
        padding: 0;
        margin: 0;
      }
      button {
        color: @text-dark;
        background: @bg-lighter-transparent;
        border: 1px solid @border-dark;
        margin: 20px 0;
      }
      p {
        color: @grey;
        a {
          color: @grey;
          &:hover {
            color: @primary-color;
          }
        }
      }
    }
  }
}

@media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
  .nav-header-icon-title {
    padding-right: 0px;
  }

  .faces-tile-1 {
    .faces-container {
      width: 100%;
      padding: 40;
      .row {
        margin-bottom: 20px;
      }
      h2 {
        color: @text-light;
        border-right: none;
        padding: 0;
        margin: 0;
      }
      button {
        color: @text-light;
        background: @bg-lighter-transparent;
        border: 1px solid @border-light;
        margin: 20px 0;
      }
      p {
        color: @grey;
        a {
          color: @grey;
          &:hover {
            color: @primary-color;
          }
        }
      }
    }
  }
}

@media (min-width: @screen-lg-min) {
  .faces-tile-1 {
    .faces-container {
      //position: absolute;
      //top: 0;
      //width: 88%;
      //right: 0;
      //left: 0;
      //margin: auto;
      //bottom: 0;
      h2 {
        color: @text-light;
        border-right: 1px solid @border-light;
        padding: 20px 20px;
        text-align: right;
      }
    }
  }
}

